[package]
name = "diacritics"
version = "0.1.0"
authors = ["yesseri <henrik.zenkert@gmail.com>"]
edition = "2018"
description = "Remove diacritics from letters, for example when standardizing input for a search"
license = "GNU GPLv3"
repository = "https://github.com/YesSeri/diacritics"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
