[package]
name = "diacritics"
version = "0.1.2"
authors = ["yesseri <henrik.zenkert@gmail.com>"]
edition = "2018"
description = "Remove diacritics from letters, for example when standardizing input for a search"
license = "GPL-3.0"
repository = "https://github.com/YesSeri/diacritics"
readme = "README.md"
keywords = ["search", "diacritics", "normalize"]

[dependencies]
